# template-cmake_project

./: .gitignore  CMakeLists.txt  conanfile.txt
benchmarks/: CMakeLists.txt  benchmark.cpp
src/: CMakeLists.txt  sphere.cpp  sphere.h
src/include/: CMakeLists.txt  shape.h
tests/: CMakeLists.txt  shapetest.cpp  testmain.cpp
